# Track-O-Tron

./: .gitmodules  README.MD
pc/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
pc/src/: attitudeConv.cpp  main.cpp  main.rs
platformio/: fritzing-schematic.fzz  platformio.ini
platformio/src/: main.cpp
platformio/wiring-schematic/: .gitignore  wiring-schematic.kicad_pcb  wiring-schematic.kicad_pro  wiring-schematic.kicad_sch
rpi/: accel.py  imu.py  main.py  net.py
wiring-schematic/: .gitignore  wiring-schematic.kicad_pcb  wiring-schematic.kicad_pro  wiring-schematic.kicad_sch
